--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="tobo-list">
+    <div id="todo-list">
         <h1>Todo List</h1>
         <form id="todo-form">
             <input type="text" id="todo-input" placeholder="Add a task">
@@ -17,5 +17,5 @@
         <ul id="tasks"></ul>
     </div>
 </body>
-<script src="script.js"></script>
+<script src="script.js"></script>  
 </html>
